fixed spacing

--- a/packages/wordpress/theme/styles/home.scss
+++ b/packages/wordpress/theme/styles/home.scss
@@ -180,7 +180,6 @@
         display: block;
         height: auto;
         margin-top: 2rem;
-        margin-bottom: 1rem;
 
         .button {
           display: inline-flex;
